--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,14 +22,19 @@
     "babel-preset-react": "^6.22.0",
     "css-loader": "^0.26.1",
     "eslint": "^6.2.1",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
     "lodash": "^4.17.4",
+    "prettier": "1.18.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.6",
@@ -43,5 +48,6 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
-  }
+  },
+  "dependencies": {}
 }
